[gd_scene load_steps=2 format=3 uid="uid://cm6if7vq1xo8c"]

[ext_resource type="Script" path="res://scenes/home.gd" id="1_377h1"]

[node name="Home" type="Node2D"]
script = ExtResource("1_377h1")

[node name="LanguageOptionButton" type="OptionButton" parent="."]
offset_left = 1683.0
offset_top = 55.0
offset_right = 1870.0
offset_bottom = 114.0
theme_override_font_sizes/font_size = 32

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 120.0
offset_top = 580.0
offset_right = 520.0
offset_bottom = 980.0
theme_override_constants/separation = 20
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="SettingButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Setting"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Exit"

[connection signal="item_selected" from="LanguageOptionButton" to="." method="_on_language_option_button_item_selected"]
[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_start_button_down"]
[connection signal="button_down" from="VBoxContainer/SettingButton" to="." method="_on_setting_button_down"]
[connection signal="button_down" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_down"]
